# red_blud_eyes

./: DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  GITHUB_SECRETS_SETUP.md  GITHUB_SETUP.md  INDEX.md  PROJECT_SUMMARY.md  Procfile  QUICK_REFERENCE.md  README.md  check_railway_vars.sh  pyproject.toml  railway.toml  render.yaml  requirements.txt  start.sh
.github/workflows/: deploy.yml
src/: __init__.py  env.py  induction_proof.py  knowledge.py  proof.py  puzzle.py  reasoning.py  simulation.py  web_server.py
tests/: test_puzzle.py  test_reasoning.py
web/: index.html  script.js
